@@ -32,22 +32,16 @@ import static com.formkiq.testutils.aws.TestServices.OCR_BUCKET_NAME;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
-import static software.amazon.awssdk.services.dynamodb.model.AttributeValue.fromS;
-
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
-import com.formkiq.aws.dynamodb.DynamoDbService;
-import com.formkiq.aws.dynamodb.DynamoDbServiceExtension;
 import com.formkiq.aws.dynamodb.ID;
-import com.formkiq.aws.dynamodb.actions.FindDocumentActions;
-import com.formkiq.aws.dynamodb.builder.DynamoDbTypes;
+import com.formkiq.module.actions.ActionBuilder;
 import com.formkiq.module.lambda.ocr.docx.PptxFormatConverter;
 import com.formkiq.module.lambda.ocr.docx.XlsxFormatConverter;
 import org.junit.jupiter.api.BeforeAll;
@@ -83,7 +77,6 @@ import com.google.gson.GsonBuilder;
 import software.amazon.awssdk.auth.credentials.AwsCredentialsProvider;
 import software.amazon.awssdk.auth.credentials.AwsSessionCredentials;
 import software.amazon.awssdk.auth.credentials.StaticCredentialsProvider;
-import software.amazon.awssdk.services.dynamodb.model.AttributeValue;
 
 /**
  * 
@@ -106,15 +99,13 @@ class OcrTesseractProcessorTest {
   private static OcrTesseractProcessor processor;
   /** {@link S3Service}. */
   private static S3Service s3;
-  /** {@link DynamoDbService}. */
-  private static DynamoDbService db;
 
   @BeforeAll
   public static void beforeAll() {
 
     Map<String, String> map = Map.of("AWS_REGION", AWS_REGION.toString(), "DOCUMENTS_TABLE",
         DOCUMENTS_TABLE, "DOCUMENTS_S3_BUCKET", BUCKET_NAME, "OCR_S3_BUCKET", OCR_BUCKET_NAME,
-        "SNS_DOCUMENT_EVENT", "", "OPERATIONAL_MODE", "ACTIVE");
+        "SNS_DOCUMENT_EVENT", "");
 
     AwsCredentialsProvider cred = StaticCredentialsProvider
         .create(AwsSessionCredentials.create("ACCESSKEY", "SECRETKEY", "TOKENKEY"));
@@ -123,7 +114,6 @@ class OcrTesseractProcessorTest {
         .addService(new DynamoDbAwsServiceRegistry(), new S3AwsServiceRegistry(),
             new SnsAwsServiceRegistry())
         .build();
-    services.register(DynamoDbService.class, new DynamoDbServiceExtension());
 
     TesseractWrapperData wrapper = new TesseractWrapperData(OCR_TEXT);
     processor = new OcrTesseractProcessor(services,
@@ -134,7 +124,6 @@ class OcrTesseractProcessorTest {
     ocrService = services.getExtension(DocumentOcrService.class);
     s3 = services.getExtension(S3Service.class);
     actionsService = services.getExtension(ActionsService.class);
-    db = services.getExtension(DynamoDbService.class);
   }
 
   private static void createOcrRecord(final String siteId, final String documentId,
@@ -155,63 +144,9 @@ class OcrTesseractProcessorTest {
   /** {@link Context}. */
   private final Context context = new LambdaContextRecorder();
 
-  /**
-   * Test Handle Invalid Action Type.
-   *
-   * @throws Exception Exception
-   */
-  @Test
-  void testHandleInvalidActionType() throws Exception {
-    // given
-    for (String siteId : Arrays.asList(DEFAULT_SITE_ID, ID.uuid())) {
-
-      String documentId = ID.uuid();
-
-      Action dummyAction =
-          new Action().type(ActionType.FULLTEXT).status(ActionStatus.PENDING).userId("joe");
-
-      List<Action> actions =
-          List.of(new Action().type(ActionType.OCR).status(ActionStatus.RUNNING).userId("joe"),
-              dummyAction);
-      actionsService.saveNewActions(siteId, documentId, actions);
-
-      Map<String, AttributeValue> attrs = dummyAction.getAttributes(siteId);
-      attrs.put("type", fromS("mytest"));
-      db.putItem(attrs);
-
-      putFileInS3(siteId, documentId, "/example.xlsx", MimeType.MIME_XLSX);
-
-      String jobId = ID.uuid();
-      createOcrRecord(siteId, documentId, jobId);
-
-      SqsMessageRecord record = new SqsMessageRecord().eventSource("aws:sqs")
-          .body(GSON.toJson(Map.of("siteId", siteId, "documentId", documentId, "jobId", jobId,
-              "contentType", MimeType.MIME_XLSX.getContentType())));
-      SqsMessageRecords records =
-          new SqsMessageRecords().records(Collections.singletonList(record));
-
-      String json = GSON.toJson(records);
-      InputStream is = new ByteArrayInputStream(json.getBytes(StandardCharsets.UTF_8));
-
-      // when
-      processor.handleRequest(is, null, this.context);
-
-      // then
-      Ocr obj = ocrService.get(siteId, documentId);
-      assertEquals("SUCCESSFUL", obj.status().name());
-
-      String ocrS3Key = ocrService.getS3Key(siteId, documentId, jobId);
-      String text = s3.getContentAsString(OCR_BUCKET_NAME, ocrS3Key, null);
-      assertTrue(text.contains("Product\tRegion"));
-      assertTrue(text.contains("Accessories\tWest"));
-
-      var data = new FindDocumentActions(documentId).query(db, db.getTableName(), siteId, null, 2);
-
-      List<Map<String, AttributeValue>> items = data.items();
-      assertEquals(ActionType.OCR.name(), DynamoDbTypes.toString(items.get(0).get("type")));
-      assertEquals(ActionStatus.COMPLETE.name(),
-          DynamoDbTypes.toString(items.get(0).get("status")));
-    }
+  private ActionBuilder createAction(final String documentId) {
+    return new ActionBuilder().documentId(documentId).indexUlid().userId("joe")
+        .type(ActionType.OCR);
   }
 
   /**
@@ -227,17 +162,16 @@ class OcrTesseractProcessorTest {
       String documentId = ID.uuid();
       String jobId = ID.uuid();
 
-      List<Action> actions = Collections.singletonList(
-          new Action().type(ActionType.OCR).status(ActionStatus.RUNNING).userId("joe"));
-      actionsService.saveNewActions(siteId, documentId, actions);
+      List<Action> actions =
+          List.of(createAction(documentId).status(ActionStatus.RUNNING).build(siteId));
+      actionsService.saveNewActions(actions);
 
       createOcrRecord(siteId, documentId, jobId);
 
       SqsMessageRecord record =
           new SqsMessageRecord().eventSource("aws:sqs").body(GSON.toJson(Map.of("siteId", siteId,
               "documentId", documentId, "jobId", jobId, "contentType", MimeType.MIME_JPEG)));
-      SqsMessageRecords records =
-          new SqsMessageRecords().records(Collections.singletonList(record));
+      SqsMessageRecords records = new SqsMessageRecords().records(List.of(record));
 
       String json = GSON.toJson(records);
       InputStream is = new ByteArrayInputStream(json.getBytes(StandardCharsets.UTF_8));
@@ -268,9 +202,9 @@ class OcrTesseractProcessorTest {
       String documentId = ID.uuid();
       String jobId = ID.uuid();
 
-      List<Action> actions = Collections.singletonList(
-          new Action().type(ActionType.OCR).status(ActionStatus.RUNNING).userId("joe"));
-      actionsService.saveNewActions(siteId, documentId, actions);
+      List<Action> actions =
+          List.of(createAction(documentId).status(ActionStatus.RUNNING).build(siteId));
+      actionsService.saveNewActions(actions);
 
       String documentS3Key = createS3Key(siteId, documentId);
       s3.putObject(BUCKET_NAME, documentS3Key, "testdata".getBytes(StandardCharsets.UTF_8),
@@ -281,8 +215,7 @@ class OcrTesseractProcessorTest {
       SqsMessageRecord record = new SqsMessageRecord().eventSource("aws:sqs")
           .body(GSON.toJson(Map.of("siteId", siteId, "documentId", documentId, "jobId", jobId,
               "contentType", MimeType.MIME_JPEG.getContentType())));
-      SqsMessageRecords records =
-          new SqsMessageRecords().records(Collections.singletonList(record));
+      SqsMessageRecords records = new SqsMessageRecords().records(List.of(record));
 
       String json = GSON.toJson(records);
       InputStream is = new ByteArrayInputStream(json.getBytes(StandardCharsets.UTF_8));
@@ -315,17 +248,16 @@ class OcrTesseractProcessorTest {
       String documentId = ID.uuid();
       String jobId = ID.uuid();
 
-      List<Action> actions = Collections.singletonList(
-          new Action().type(ActionType.OCR).status(ActionStatus.RUNNING).userId("joe"));
-      actionsService.saveNewActions(siteId, documentId, actions);
+      List<Action> actions =
+          List.of(createAction(documentId).status(ActionStatus.RUNNING).build(siteId));
+      actionsService.saveNewActions(actions);
 
       createOcrRecord(siteId, documentId, jobId);
 
       SqsMessageRecord record =
           new SqsMessageRecord().eventSource("aws:sqs").body(GSON.toJson(Map.of("siteId", siteId,
               "documentId", documentId, "jobId", jobId, "contentType", MimeType.MIME_DOCX)));
-      SqsMessageRecords records =
-          new SqsMessageRecords().records(Collections.singletonList(record));
+      SqsMessageRecords records = new SqsMessageRecords().records(List.of(record));
 
       String json = GSON.toJson(records);
       InputStream is = new ByteArrayInputStream(json.getBytes(StandardCharsets.UTF_8));
@@ -355,9 +287,9 @@ class OcrTesseractProcessorTest {
       String documentId = ID.uuid();
       String jobId = ID.uuid();
 
-      List<Action> actions = Collections.singletonList(
-          new Action().type(ActionType.OCR).status(ActionStatus.RUNNING).userId("joe"));
-      actionsService.saveNewActions(siteId, documentId, actions);
+      List<Action> actions =
+          List.of(createAction(documentId).status(ActionStatus.RUNNING).build(siteId));
+      actionsService.saveNewActions(actions);
 
       putFileInS3(siteId, documentId, "/file-sample_100kB.docx", MimeType.MIME_DOCX);
 
@@ -366,8 +298,7 @@ class OcrTesseractProcessorTest {
       SqsMessageRecord record = new SqsMessageRecord().eventSource("aws:sqs")
           .body(GSON.toJson(Map.of("siteId", siteId, "documentId", documentId, "jobId", jobId,
               "contentType", MimeType.MIME_DOCX.getContentType())));
-      SqsMessageRecords records =
-          new SqsMessageRecords().records(Collections.singletonList(record));
+      SqsMessageRecords records = new SqsMessageRecords().records(List.of(record));
 
       String json = GSON.toJson(records);
       InputStream is = new ByteArrayInputStream(json.getBytes(StandardCharsets.UTF_8));
@@ -401,9 +332,9 @@ class OcrTesseractProcessorTest {
       String documentId = ID.uuid();
       String jobId = ID.uuid();
 
-      List<Action> actions = Collections.singletonList(
-          new Action().type(ActionType.OCR).status(ActionStatus.RUNNING).userId("joe"));
-      actionsService.saveNewActions(siteId, documentId, actions);
+      List<Action> actions =
+          List.of(createAction(documentId).status(ActionStatus.RUNNING).build(siteId));
+      actionsService.saveNewActions(actions);
 
       putFileInS3(siteId, documentId, "/file-sample_100kB.doc", MimeType.MIME_DOC);
 
@@ -412,8 +343,7 @@ class OcrTesseractProcessorTest {
       SqsMessageRecord record = new SqsMessageRecord().eventSource("aws:sqs")
           .body(GSON.toJson(Map.of("siteId", siteId, "documentId", documentId, "jobId", jobId,
               "contentType", MimeType.MIME_DOC.getContentType())));
-      SqsMessageRecords records =
-          new SqsMessageRecords().records(Collections.singletonList(record));
+      SqsMessageRecords records = new SqsMessageRecords().records(List.of(record));
 
       String json = GSON.toJson(records);
       InputStream is = new ByteArrayInputStream(json.getBytes(StandardCharsets.UTF_8));
@@ -447,9 +377,9 @@ class OcrTesseractProcessorTest {
       String documentId = ID.uuid();
       String jobId = ID.uuid();
 
-      List<Action> actions = Collections.singletonList(
-          new Action().type(ActionType.OCR).status(ActionStatus.RUNNING).userId("joe"));
-      actionsService.saveNewActions(siteId, documentId, actions);
+      List<Action> actions =
+          List.of(createAction(documentId).status(ActionStatus.RUNNING).build(siteId));
+      actionsService.saveNewActions(actions);
 
       putFileInS3(siteId, documentId, "/sample.pdf", MimeType.MIME_PDF);
 
@@ -458,8 +388,7 @@ class OcrTesseractProcessorTest {
       SqsMessageRecord record = new SqsMessageRecord().eventSource("aws:sqs")
           .body(GSON.toJson(Map.of("siteId", siteId, "documentId", documentId, "jobId", jobId,
               "contentType", MimeType.MIME_PDF.getContentType())));
-      SqsMessageRecords records =
-          new SqsMessageRecords().records(Collections.singletonList(record));
+      SqsMessageRecords records = new SqsMessageRecords().records(List.of(record));
 
       String json = GSON.toJson(records);
       InputStream is = new ByteArrayInputStream(json.getBytes(StandardCharsets.UTF_8));
@@ -492,9 +421,9 @@ class OcrTesseractProcessorTest {
       String documentId = ID.uuid();
       String jobId = ID.uuid();
 
-      List<Action> actions = Collections.singletonList(
-          new Action().type(ActionType.OCR).status(ActionStatus.RUNNING).userId("joe"));
-      actionsService.saveNewActions(siteId, documentId, actions);
+      List<Action> actions =
+          List.of(createAction(documentId).status(ActionStatus.RUNNING).build(siteId));
+      actionsService.saveNewActions(actions);
 
       putFileInS3(siteId, documentId, "/collection.pdf", MimeType.MIME_PDF);
 
@@ -503,8 +432,7 @@ class OcrTesseractProcessorTest {
       SqsMessageRecord record = new SqsMessageRecord().eventSource("aws:sqs")
           .body(GSON.toJson(Map.of("siteId", siteId, "documentId", documentId, "jobId", jobId,
               "contentType", MimeType.MIME_PDF.getContentType())));
-      SqsMessageRecords records =
-          new SqsMessageRecords().records(Collections.singletonList(record));
+      SqsMessageRecords records = new SqsMessageRecords().records(List.of(record));
 
       String json = GSON.toJson(records);
       InputStream is = new ByteArrayInputStream(json.getBytes(StandardCharsets.UTF_8));
@@ -539,9 +467,9 @@ class OcrTesseractProcessorTest {
       String documentId = ID.uuid();
       String jobId = ID.uuid();
 
-      List<Action> actions = Collections.singletonList(
-          new Action().type(ActionType.OCR).status(ActionStatus.RUNNING).userId("joe"));
-      actionsService.saveNewActions(siteId, documentId, actions);
+      List<Action> actions =
+          List.of(createAction(documentId).status(ActionStatus.RUNNING).build(siteId));
+      actionsService.saveNewActions(actions);
 
       putFileInS3(siteId, documentId, "/multipage_example.tif", MimeType.MIME_TIF);
 
@@ -551,8 +479,7 @@ class OcrTesseractProcessorTest {
           .body(GSON.toJson(Map.of("siteId", siteId, "documentId", documentId, "jobId", jobId,
               "request", Map.of("ocrNumberOfPages", ocrNumberOfPages), "contentType",
               MimeType.MIME_TIF.getContentType())));
-      SqsMessageRecords records =
-          new SqsMessageRecords().records(Collections.singletonList(record));
+      SqsMessageRecords records = new SqsMessageRecords().records(List.of(record));
 
       String json = GSON.toJson(records);
       InputStream is = new ByteArrayInputStream(json.getBytes(StandardCharsets.UTF_8));
@@ -588,9 +515,9 @@ class OcrTesseractProcessorTest {
       String documentId = ID.uuid();
       String jobId = ID.uuid();
 
-      List<Action> actions = Collections.singletonList(
-          new Action().type(ActionType.OCR).status(ActionStatus.RUNNING).userId("joe"));
-      actionsService.saveNewActions(siteId, documentId, actions);
+      List<Action> actions =
+          List.of(createAction(documentId).status(ActionStatus.RUNNING).build(siteId));
+      actionsService.saveNewActions(actions);
 
       putFileInS3(siteId, documentId, "/multipage_example.pdf", MimeType.MIME_PDF);
 
@@ -600,8 +527,7 @@ class OcrTesseractProcessorTest {
           .body(GSON.toJson(Map.of("siteId", siteId, "documentId", documentId, "jobId", jobId,
               "request", Map.of("ocrNumberOfPages", ocrNumberOfPages), "contentType",
               MimeType.MIME_PDF.getContentType())));
-      SqsMessageRecords records =
-          new SqsMessageRecords().records(Collections.singletonList(record));
+      SqsMessageRecords records = new SqsMessageRecords().records(List.of(record));
 
       String json = GSON.toJson(records);
       InputStream is = new ByteArrayInputStream(json.getBytes(StandardCharsets.UTF_8));
@@ -644,9 +570,9 @@ class OcrTesseractProcessorTest {
       String documentId = ID.uuid();
       String jobId = ID.uuid();
 
-      List<Action> actions = Collections.singletonList(
-          new Action().type(ActionType.OCR).status(ActionStatus.RUNNING).userId("joe"));
-      actionsService.saveNewActions(siteId, documentId, actions);
+      List<Action> actions =
+          List.of(createAction(documentId).status(ActionStatus.RUNNING).build(siteId));
+      actionsService.saveNewActions(actions);
 
       putFileInS3(siteId, documentId, "/example.pptx", MimeType.MIME_PPTX);
 
@@ -655,8 +581,7 @@ class OcrTesseractProcessorTest {
       SqsMessageRecord record = new SqsMessageRecord().eventSource("aws:sqs")
           .body(GSON.toJson(Map.of("siteId", siteId, "documentId", documentId, "jobId", jobId,
               "contentType", MimeType.MIME_XLSX.getContentType())));
-      SqsMessageRecords records =
-          new SqsMessageRecords().records(Collections.singletonList(record));
+      SqsMessageRecords records = new SqsMessageRecords().records(List.of(record));
 
       String json = GSON.toJson(records);
       InputStream is = new ByteArrayInputStream(json.getBytes(StandardCharsets.UTF_8));
@@ -691,9 +616,9 @@ class OcrTesseractProcessorTest {
       String documentId = ID.uuid();
       String jobId = ID.uuid();
 
-      List<Action> actions = Collections.singletonList(
-          new Action().type(ActionType.OCR).status(ActionStatus.RUNNING).userId("joe"));
-      actionsService.saveNewActions(siteId, documentId, actions);
+      List<Action> actions =
+          List.of(createAction(documentId).status(ActionStatus.RUNNING).build(siteId));
+      actionsService.saveNewActions(actions);
 
       putFileInS3(siteId, documentId, "/example.xlsx", MimeType.MIME_XLSX);
 
@@ -702,8 +627,7 @@ class OcrTesseractProcessorTest {
       SqsMessageRecord record = new SqsMessageRecord().eventSource("aws:sqs")
           .body(GSON.toJson(Map.of("siteId", siteId, "documentId", documentId, "jobId", jobId,
               "contentType", MimeType.MIME_XLSX.getContentType())));
-      SqsMessageRecords records =
-          new SqsMessageRecords().records(Collections.singletonList(record));
+      SqsMessageRecords records = new SqsMessageRecords().records(List.of(record));
 
       String json = GSON.toJson(records);
       InputStream is = new ByteArrayInputStream(json.getBytes(StandardCharsets.UTF_8));
